* Resolve {bz: 1459} by hiding overflow-y in browsers that support it.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@10461 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -15,6 +15,12 @@ div#contentColumns div#contentLeft {
     overflow: auto !important;
 }
 
+/* {bz: 1459}: Safari needs overflow-y:hidden to hide the vertical scrollbar */
+body div#contentColumns div#contentLeft {
+    overflow-x: auto !important;
+    overflow-y: hidden !important;
+}
+
 div#contentColumns div#contentLeft.contentLeftOverflow {
     width: auto !important;
     overflow: visible !important;
